# VIGI-HomeAssistant

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci-release.yml
custom_components/vigi_nvr/: __init__.py  api.py  binary_sensor.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  events.py  manifest.json  sensor.py  switch.py
docs/: endpoint-catalog.md  implementation-plan.md  proposal.md
docs/discovery/: endpoints.md  summary.json
scripts/: capture_vigi_events.py  discover_vigi_openapi.py  generate_release_notes.py
tests/: __init__.py  conftest.py  test_api.py  test_coordinator.py  test_diagnostics_and_webhook.py  test_entities.py  test_events.py  test_platform_setup.py
