[project]
name = "vigi-nvr-home-assistant"
version = "0.4.1rc2.dev11"
description = "Home Assistant custom integration scaffold for TP-Link VIGI NVR OpenAPI."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant>=2026.1.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
